Fixed HTML Code not showing raw code

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,12 @@ nav {
     z-index: 1;
 }
 
+xmp {
+    font-size: 17px;
+    margin: 0;
+    padding: 0;
+}
+
 #char {
     color: #ff4444;
     font-weight: 800;
